--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@
 bin/
 gen/
 out/
-#  Uncomment the following line in case you need and you don't have the release build type files in your app
+#  Uncomment the following lines in case you need and you don't have the debug and release build type files in your app
 # release/
+# debug/
 
 # Gradle files
 .gradle/
